<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_monetization"
            android:title="@string/movimentacao" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_money_24"
            android:title="@string/simulacao" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/relatorios" />
        <item
            android:id="@+id/sair"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/sair" />
    </group>
</menu>