<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_movimentacao">

    <fragment
        android:id="@+id/nav_movimentacao"
        android:name="mauriciofe.github.mymoney.ui.activities.fragments.movimentacoes.MovimentacaoFragment"
        android:label="@string/movimentacao"
        tools:layout="@layout/fragment_movimentacao" />

    <fragment
        android:id="@+id/nav_simulacao"
        android:name="mauriciofe.github.mymoney.ui.activities.fragments.simulacao.SimulacaoFragment"
        android:label="@string/simulacao"
        tools:layout="@layout/fragment_simulacao" />

    <fragment
        android:id="@+id/nav_relatorios"
        android:name="mauriciofe.github.mymoney.ui.activities.fragments.relatorios.RelatoriosFragment"
        android:label="@string/relatorios"
        tools:layout="@layout/fragment_relatorios" />

</navigation>