<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.login.ResgisterActivity">

    <TextView
        android:id="@+id/register_txtPossuo_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Já possuo cadastro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn_entrar"
        app:layout_constraintVertical_bias="0.26999998" />

    <EditText
        android:id="@+id/register_editText_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_editText_nome"
        app:layout_constraintStart_toStartOf="@+id/register_editText_nome"
        app:layout_constraintTop_toBottomOf="@+id/register_editText_nome"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/register_editText_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/register_btn_entrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_editText_senha"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/register_editText_senha"
        app:layout_constraintTop_toBottomOf="@+id/register_editText_senha"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/register_editText_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="184dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/register_editText_email"
        app:layout_constraintStart_toStartOf="@id/register_editText_email"
        app:layout_constraintTop_toBottomOf="@+id/register_editText_email"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>